@@ -6,7 +6,7 @@
 	       namespace-syntax-call list-length-4 my-compare test3-import2
 	       test3-import1 get3-mod0-v2 set3-mod0-v2 counter-test-result
 	       pa-new pa-getter pa-setter pa-length iarr-set mB test1-import0
-               macro2)
+               macro2 all-zeros)
 
 (define (get3-mod0-v1) :: <object> mod0-v1)
 (define (set3-mod0-v1 x) (set! mod0-v1 x))
@@ -105,3 +105,5 @@
        (syntax-rules ()
 	 ((name) dvar3))))))
 (macro1 macro2)
+
+(define (all-zeros) '#1=(0 . #1#))
