@@ -1,3 +1,8 @@
+2014-09-17  Per Bothner  <per@bothner.com>
+
+	* PairWithPosition.java (init): New method.
+	(readExternal): Use new init method.
+
 2014-08-31  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Merge in gnu/Makefile.am.
