@@ -1,3 +1,10 @@
+2014-09-17  Per Bothner  <per@bothner.com>
+
+	* LitTable.java (emit): If a cycle is seen, look for an "init"
+	method before checked for a "set" method.  The former is more
+	appropriate for immutable-after-initialization methods.
+	This fixes Savannah bug 43233 "Dumping circular literals".
+
 2014-09-15  Per Bothner  <per@bothner.com>
 
 	* BindingInitializer.java (emit): Use new Location.define method
